# delta-robot-raspberrypi

./: .gitignore  OrinController.py  README.md  RaspberryPiNode.py  RaspberryPi_Port_Configuration.txt  package.xml  requirements.txt  run_orin_controller.sh  run_rpi_robot.sh  setup.cfg  setup.py
delta_robot_ros/: __init__.py  orin_controller.py  rpi_robot_node.py
launch/: delta_robot.launch.py
resource/: delta_robot_ros
