<?xml version="1.0"?>
<package format="3">
  <name>delta_robot_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 Python nodes for the Delta robot controller UI and Raspberry Pi motion node.</description>
  <maintainer email="young@example.com">young</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-pygame</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
